--- a/.github/DISCUSSION_TEMPLATE/ideas.yml
+++ b/.github/DISCUSSION_TEMPLATE/ideas.yml
@@ -1,6 +1,4 @@
-name: Feature Request
-description: Suggest an idea.
-labels: [enhancement]
+labels: ["enhancement"]
 body:
   - type: markdown
     attributes:
