--- a/.github/ISSUE_TEMPLATE/enhancement_plan.yml
+++ b/.github/ISSUE_TEMPLATE/enhancement_plan.yml
@@ -1,7 +1,5 @@
 name: Enhancement Plan
-description: |
-  Propose a scoped and actionable improvement. \n
-  Start with "Ideas" instead if steps towards the improvement could be further defined.
+description: Propose a scoped and actionable improvement. Start with "Ideas" instead if steps towards the improvement could be further defined.
 labels: ["enhancement"]
 body:
   - type: markdown
