Shrink text boxes

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -46,7 +46,7 @@ body:
       options:
         - "Nice-to-have"
         - "Blocker"
-  - type: textarea
+  - type: input
     id: impact_context
     attributes:
       label: Impact Context
@@ -58,12 +58,12 @@ body:
       description: Is there a workaround for this Issue? 
       options:
         - "Yes"
-  - type: textarea
+  - type: input
     id: workaround_description
     attributes:
       label: Workaround Description
       description: If yes, supplement how could the Issue be worked around.
-  - type: textarea
+  - type: input
     id: additional
     attributes:
       label: Additional Context
@@ -103,7 +103,7 @@ body:
       options:
         - "Maybe"
         - "Yes"
-  - type: textarea
+  - type: input
     id: pr_support
     attributes:
       label: Support Needs
