--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -50,6 +50,15 @@ body:
     attributes:
       label: Workaround Description
       description: If yes, supplement how could the Issue be worked around.
+  - type: input
+    id: additional
+    attributes:
+      label: Additional Context
+      description: Supplement further information if applicable.
+  - type: markdown
+    attributes:
+      value: |
+        # Impact
   - type: dropdown
     id: impact
     attributes:
@@ -63,16 +72,10 @@ body:
     attributes:
       label: Blocker Context
       description: If a blocker, supplement how does this Issue affect the project.
-  - type: input
-    id: additional
-    attributes:
-      label: Additional Context
-      description: Supplement further information if applicable.
   - type: markdown
     attributes:
       value: |
         # Environment
-        Specify your version of Noir and Proving Backend tooling used.
   - type: input
     id: nargo-version
     attributes:
