--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -5,7 +5,7 @@ body:
   - type: markdown
     attributes:
       value: |
-        ## Description
+        # Description
         Thanks for taking the time to create the Issue and welcome to the Noir community!
   - type: textarea
     id: problem
@@ -33,6 +33,15 @@ body:
     attributes:
       label: Workaround Description
       description: If yes, supplement how could the Issue be worked around.
+  - type: input
+    id: additional
+    attributes:
+      label: Additional Context
+      description: Supplement further information if applicable.
+  - type: markdown
+    attributes:
+      value: |
+        # Impact
   - type: dropdown
     id: impact
     attributes:
@@ -46,15 +55,10 @@ body:
     attributes:
       label: Blocker Context
       description: If a blocker, supplement how does this Issue affect the project.
-  - type: input
-    id: additional
-    attributes:
-      label: Additional Context
-      description: Supplement further information if applicable.
   - type: markdown
     attributes:
       value: |
-        ## Pull Request
+        # Pull Request
   - type: dropdown
     id: pr-preference
     attributes:
